name:                blog
version:             0.1.0
synopsis:            The software behind the blog at blog.symer.io
homepage:            http://blog.symer.io
license:             MIT
author:              Nathaniel
maintainer:          nate@symer.io
category:            Web  
build-type:          Simple
cabal-version:       >=1.8
data-dir:            assets

executable blog
  main-is:           Main.hs
  hs-source-dirs:    src
  ghc-options:       -threaded -Wall -O3
  build-depends:     base,
                     mtl,
                     transformers,
                     containers,
                     unordered-containers,
                     text,
                     bytestring,
                     base16-bytestring,
                     time,
                     random,
                     bcrypt,
                     aeson,
                     attoparsec,
                     http-types,
                     wai,
                     wai-extra,
                     resource-pool,
                     postgresql-simple,
                     postgresql-simple-migration,
                     optparse-applicative,
                     cheapskate,
                     blaze-builder,
                     blaze-html,
                     blaze-svg,
                     blaze-markup,
                     webapp >= 0.2.0,
                     niagra >= 0.2.0,
                     
                     mime-types,
                     css-text,
                     hjsmin,
                     fsnotify,
                     directory,
                     filepath,
                     hashtables,
                     zlib,
                     cryptohash,
                     
                     data-default