name:                blog
version:             0.2.0
synopsis:            The software behind the blog at symer.io
homepage:            https://symer.io/
license:             MIT
author:              Nathaniel
maintainer:          nate@symer.io
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-dir:            assets

executable blog
  main-is:           Main.hs
  hs-source-dirs:    src
  ghc-options:       -threaded -Wall -O3
  default-language:  Haskell2010
  build-depends:     base <4.9,
                     mtl,
                     transformers,
                     containers,
                     unordered-containers,
                     text,
                     bytestring,
                     time,
                     bcrypt,
                     aeson,
                     http-types,
                     wai,
                     wai-extra,
                     resource-pool,
                     postgresql-simple,
                     postgresql-simple-migration,
                     optparse-applicative,
                     cheapskate,
                     blaze-builder,
                     blaze-html,
                     blaze-svg,
                     blaze-markup,
                     webapp >= 0.2.0,
                     niagra >= 0.2.1,
                     
                     base16-bytestring,
                     mime-types,
                     css-text,
                     hjsmin,
                     fsnotify,
                     directory,
                     filepath,
                     hashtables,
                     zlib,
                     cryptohash