name:                blog
version:             0.3.0
synopsis:            The webapp, symer.io
homepage:            https://symer.io/
license:             MIT
author:              Nathaniel
maintainer:          nate@symer.io
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-dir:            assets

executable blog
  main-is:           Main.hs
  hs-source-dirs:    src
  ghc-options:       -threaded -Wall -O3
  default-language:  Haskell2010
  other-modules:     Blog.App
                     Blog.AppState
                     Blog.Assets
                     Blog.CSS
                     Blog.FileCache
                     Blog.Page
                     Blog.Post
                     Blog.SVG
                     Blog.User
                     Blog.Util.Markdown
                     Blog.Util.Minification
  build-depends:     base < 5.0,
                     mtl,
                     transformers,
                     containers,
                     unordered-containers,
                     text,
                     bytestring,
                     time,
                     bcrypt,
                     aeson,
                     http-types,
                     wai,
                     wai-extra,
                     resource-pool,
                     postgresql-simple,
                     postgresql-simple-migration,
                     optparse-applicative,
                     cheapskate,
                     blaze-builder,
                     blaze-html,
                     blaze-svg,
                     blaze-markup,
                     webapp >= 0.6.1,
                     niagra >= 0.2.0,
                     base16-bytestring,
                     mime-types,
                     network-uri,
                     css-text,
                     language-javascript,
                     fsnotify,
                     filepath,
                     hashtables,
                     zlib,
                     cryptohash,
                     vault,
                     unix

